<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="38dp"
    android:background="@color/reviewQuestionBox"
    android:id="@+id/placeSnackBar">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <EditText
            android:id="@+id/subj_text"
            android:maxLength="4"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:ems="4"
            android:hint="Subject"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/num_text"
            android:maxLength="3"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="3"
            android:backgroundTint="@android:color/white"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:hint="Number"
            android:inputType="number"
            android:textAlignment="center" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:text="Add a course!"
        android:textColor="@android:color/darker_gray"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="submit"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</android.support.constraint.ConstraintLayout>