...
        android:nestedScrollingEnabled="true"
        android:scrollbars="vertical"
        android:layout_below="@+id/toolbar"
        android:divider="@null"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/UBCBlue"
...
